Fix HTML structure and remove duplicate content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a
               class="seeMore"
               target="_blank"
-              href="https://github.com/MDJAmin"
+              href=""
               ><button>See More</button></a
             >
           </div>
@@ -43,7 +43,7 @@
             <a
               class="seeMore"
               target="_blank"
-              href="https://github.com/MDJAmin"
+              href=""
               ><button>See More</button></a
             >
           </div>
@@ -63,7 +63,7 @@
             <a
               class="seeMore"
               target="_blank"
-              href="https://github.com/MDJAmin"
+              href=""
               ><button>See More</button></a
             >
           </div>
@@ -83,7 +83,7 @@
             <a
               class="seeMore"
               target="_blank"
-              href="https://github.com/MDJAmin"
+              href=""
               ><button>See More</button></a
             >
           </div>
@@ -94,14 +94,7 @@
         <button class="next">▷</button>
       </div>
     </div>
-    <div class="MDJAminDiv">
-      <a
-        class="MDJAmin"
-        href="https://github.com/MDJAmin"
-        target="_blank"
-        >MDJAmin</a
-      >
-    </div>
-    <script src="javaSc.js"></script>
+      <script src="javaSc.js"></script>
 </body>
+
 </html>
